--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -7,31 +6,52 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<link rel="stylesheet" href="myStyles.css">
+	
+	 <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+	
 	<title>Jason Thomas</title>
 </head>
 
 <body>
 
-	<header class="bgimage">
+	<nav class="navbar navbar-static-top navbar-inverse">
 		<div class="container">
-			<h1>Jason Thomas</h1>
-			<div class="menuItems container row">
-				<ul>
-					<li>
-					<a href="#about">About Me</a></li>
-					<li>
-					<a href="#skills">Skills</a></li>
-					<li>
-					<a href="#world">My World</a></li>
-					<li>
-					<a href="stalk">Stalk Me</a></li>
-				</ul>
+			<a class="navbar-brand" href="#page-top">Jason Thomas</a>
+			
+		<div class="menuItems <!--collapse navbar-collapse (add this back when you add the mobile app menu button-->">
+			<ul class="nav navbar-nav navbar-right">
+				<li class="hidden">
+                    <a href="#page-top"></a>
+                </li>
+				<li class="page-scroll">
+					<a href="#about">About Me</a>
+				</li>
+				<li class="page-scroll">
+					<a href="#skills">Skills</a>
+				</li>
+				<li class="page-scroll">
+					<a href="#world">My World</a>
+				</li>
+				<li class="page-scroll">
+					<a href="#stalk">Stalk Me</a>
+				</li>
+			</ul>
+		</div>
+		</div>
+	</nav>
+	
+	<header>
+		<div class="container">
+			<div class="row">
+				<img class="picture" src="images/jason.jpg" title="Jason" alt="Jason">
+				<p>Jason Thomas</p>
 			</div>
 		</div>
 	</header>
 
-	<div id="about">
-		<h1>About Me</h1>
+	<div class="about">
+		<h1 id="about">About Me</h1>
 		<p>
 			After gaduating from High School I aspired to be an underwater welder. 
 			My love of talking with people lead me into the world of sales. Now in my 
@@ -43,8 +63,8 @@
 			It makes my day to make others happy and help them with what they need.</p>
 	</div>
 	
-	<div id="skills">
-	<h1>Skills</h1>
+	<div class="skills">
+	<h1 id="skills">Skills</h1>
 	<!--Circle One 1984-->
 	<p>Baby Jason was born!</p>
 	
@@ -79,9 +99,31 @@
 	<p>Started learning how to code</p>
 	</div>
 	
-	<div id="world">
-	<h1>My World</h1>
+	<div class="world">
+		<h1 id="world">My World</h1>
+		<div class="serving">
+			<!-- Scrolling through pictures-->
+			<h3>Helping Others</h3> 
+			<p>Helping other people is a huge passon of mine. There 
+			are people both locally and aroud the world that need the
+			help from others for different reasons. One day (crossing my
+			fingers it doesn't happen) it could be me that needs help from others. 
+		</div>
+		<div class="volleyball">
+			<h3>Volleyball</h3>
+			<p>Playing volleyball has helped me learn a lot about
+			life. It as taught me patience, skills take time to develop.
+			Most important, in order to succeed you have to work with 
+			your teammates around you. 
+		</div>
 	</div>
+	
+	<div class="stalk">
+		<h1 id="stalk">Stalk Me</h1>
+		
+		Phone: 505-205-3399
+		Email: ThomasJasonM1@Gmail.com
+	</div> 
 
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
